# tap-superset

./: .env.sample  LICENSE  README.md  catalog-info.yaml  meltano.yml  pyproject.toml
.github/workflows/: test.yml
tap_superset/: __init__.py  __main__.py  auth.py  client.py  client_helper.py  streams.py  tap.py
tests/: __init__.py  test_client_helper.py  test_core.py
