[tool.poetry]
name = "gupy-tap-superset"
version = "0.0.1"
description = "`tap-superset` is a Singer tap for Superset, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Lorran Rodrigues <lorran.rodr@gmail.com>"]
keywords = [
    "ELT",
    "Superset",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = "Apache-2.0"
packages = [
    { include = "tap_superset" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
importlib-resources = { version = "==6.1.*", python = "<3.9" }
singer-sdk = { version="~=0.35.1" }
fs-s3fs = { version = "~=1.1.1", optional = true }
requests = "~=2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
singer-sdk = { version="~=0.35.1", extras = ["testing"] }
viztracer = "^0.16.2"
meltano = "^3.3.1"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true

[tool.ruff]
src = ["tap_superset"]
target-version = "py38"

[tool.ruff.lint]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["tap_superset"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core==1.8.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-superset = 'tap_superset.tap:TapSuperset.cli'
